{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "cb227763-8a0b-4c91-9912-2986b0cfa7ed",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "afb34e60-f5fc-47db-811c-353419517f6e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "c3aeb129-fa26-4da9-9a28-673d4bf8391b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f575b809-b22c-4dc5-9a36-2773fb2ae3dc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "386411ab-be68-43fb-bba5-24b3af6c3493",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b495c0e6-0efc-4dbb-864b-aabce355e5f3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c8a1d005-acec-4ac9-adda-4aa6f571984c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Touch",
            "id": "4f008cf3-20ae-43f7-85c5-7d6a058b3991",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "69aa3896-c24e-40e2-a938-565a18fd4c58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "173f868b-94af-407e-b5e6-f97021432f70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96bf83a4-e7cf-4b9b-b12b-2de8f2bb27ea",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22df1757-f45a-4104-9751-8a925ae5ccd1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}